design: добавлено название страниц

--- a/src/main/resources/templates/all-tasks.html
+++ b/src/main/resources/templates/all-tasks.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/closed-source/header-styles.css">
     <link rel="stylesheet" type="text/css" th:href="@{/css/open-source/particles-styles.css}" />
     <link rel="stylesheet" href="/css/closed-source/all-tasks.css">
-    <title>ЕГЭ-2024: задания, ответы, решения</title>
+    <title>Онлайн школа - MATRIX</title>
 </head>
 <body>
 <div th:insert="~{header :: header}"></div>
