--- a/src/main/resources/templates/choose-option-type-template.html
+++ b/src/main/resources/templates/choose-option-type-template.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ЕГЭ 2024</title>
+    <title>Онлайн школа - MATRIX</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/closed-source/choose-option.css}"/>
     <link rel="stylesheet" href="/css/closed-source/header-styles.css">
     <script src="/javascript/closed-source/choose_option_logic.js" defer></script>
