--- a/src/main/resources/templates/homework.html
+++ b/src/main/resources/templates/homework.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/closed-source/header-styles.css">
-
+    <title>Онлайн школа - MATRIX</title>
     <script src="/javascript/closed-source/homework_template_logic.js" defer></script>
     <link rel="stydlesheet" type="text/css" th:href="@{/css/open-source/particles-styles.css}"/>
     <link rel="stylesheet" href="/css/closed-source/module-styles.css">
