--- a/src/main/resources/templates/theory.html
+++ b/src/main/resources/templates/theory.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Теоритический раздел</title>
+    <title>Онлайн школа - MATRIX</title>
     <link rel="stylesheet" href="/css/closed-source/header-styles.css">
     <link rel="stylesheet" type="text/css" th:href="@{/css/open-source/particles-styles.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/closed-source/theory-styles.css}"/>
