--- a/src/main/resources/templates/module-template.html
+++ b/src/main/resources/templates/module-template.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/closed-source/header-styles.css">
-
+    <title>Онлайн школа - MATRIX</title>
     <script src="/javascript/closed-source/module_template_logic.js" defer></script>
     <title th:text="'Задание ' + ${moduleId} + ' ЕГЭ'"></title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/open-source/particles-styles.css}"/>
