feature: User теперь включает в себя больше информации и ссылку на личную доску miro

--- a/src/main/resources/templates/homework.html
+++ b/src/main/resources/templates/homework.html
@@ -86,8 +86,8 @@
 
 </div>
 
-<iframe src="https://miro.com/app/live-embed/uXjVNuEFRQU=/?autoplay=true&moveToViewport=-23165,-5837,13803,7546"
-        frameBorder="0" scrolling="no" allowFullScreen>
+<iframe th:src="@{'https://miro.com/app/live-embed/' + ${miro_board} + '/?autoplay=true&amp;moveToViewport=-23165,-5837,13803,7546'}"
+        frameborder="0" scrolling="no" allowfullscreen>
 </iframe>
 
 <div id="stretch">
