--- a/src/main/resources/templates/management.html
+++ b/src/main/resources/templates/management.html
@@ -9,5 +9,19 @@
 </head>
 <body>
 <div th:insert="~{header :: header}"></div>
+<div id="create-user">
+  <div class="wrapper">
+    <input placeholder="Имя пользователя" id="user-name-create" type="text">
+    <input placeholder="Фамилия пользователя" id="user-surname-create" type="text">
+    <input placeholder="Номер телефона" id="user-phone-create" type="text">
+    <input placeholder="Email пользователя" id="user-email-create" type="text">
+    <input placeholder="Телеграм пользователя" id="user-tg-create" type="text">
+    <input placeholder="Ссылка на личную доску miro" id="user-miro-board-create" type="text">
+  </div>
+</div>
+
+<div id="delete-user">
+
+</div>
 </body>
 </html>
