--- a/src/main/resources/static/css/closed-source/management-styles.css
+++ b/src/main/resources/static/css/closed-source/management-styles.css
@@ -1,3 +1,21 @@
 body{
     background-color: #121212;
 }
+#create-user, #delete-user {
+    user-select: none;
+    position: fixed;
+    width: 40%;
+    height: 70%;
+    text-decoration: none;
+    background-color: rgba(255,255,255,0.05);
+    border-radius: 40px;
+    border: 3px solid rgba(255,255,255,0.05);
+}
+#create-user{
+    left: 5%;
+    top: 15%;
+}
+#delete-user{
+    right: 5%;
+    top: 15%;
+}
