--- a/src/main/resources/templates/option-template.html
+++ b/src/main/resources/templates/option-template.html
@@ -117,8 +117,8 @@
     </div>
 </div>
 
-<iframe src="https://miro.com/app/live-embed/uXjVNuEFRQU=/?autoplay=true&moveToViewport=-23165,-5837,13803,7546"
-        frameBorder="0" scrolling="no" allowFullScreen>
+<iframe th:src="@{'https://miro.com/app/live-embed/' + ${miro_board} + '/?autoplay=true&amp;moveToViewport=-23165,-5837,13803,7546'}"
+        frameborder="0" scrolling="no" allowfullscreen>
 </iframe>
 <div id="stretch">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 51" width="24" height="51">
