--- a/src/main/resources/static/css/closed-source/management-styles.css
+++ b/src/main/resources/static/css/closed-source/management-styles.css
@@ -2,20 +2,69 @@ body{
     background-color: #121212;
 }
 #create-user, #delete-user {
+    text-align: center;
     user-select: none;
     position: fixed;
-    width: 40%;
-    height: 70%;
     text-decoration: none;
     background-color: rgba(255,255,255,0.05);
     border-radius: 40px;
+    padding: 1%;
     border: 3px solid rgba(255,255,255,0.05);
 }
 #create-user{
+    width: 40%;
+    height: 84%;
     left: 5%;
-    top: 15%;
+    top: 10%;
 }
 #delete-user{
+    width: 40%;
+    height: 70%;
     right: 5%;
     top: 15%;
+}
+.label{
+    display: inline-block;
+    font-size: 26px;
+    width: 80%;
+    color: #e9e9e9;
+    font-family: 'Helvetica', sans-serif;
+}
+input, select, #create-user-button{
+    background-color: #e9e9e9;
+    pointer-events: all;
+    display: inline-block;
+    outline: none;
+    border: none;
+    padding-left: 10px;
+    width: 80%;
+    height: 6vh;
+    font-size: 25px;
+    border-radius: 20px;
+    margin-top: 20px;
+}
+select{
+    width: 82%;
+}
+
+#create-user-button{
+    background-color: rgba(255, 255, 255, 0.07);
+    border: none;
+    color: #dadada;
+    border-radius: 13px;
+    font-size: 20px;
+    transition: background-color 0.4s ease, color 0.4s ease, opacity 0.4s ease;
+    font-weight: normal;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Helvetica', sans-serif;
+}
+#create-user-button:hover{
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.5);
+    color: #000;
+}
+#create-user-button:hover{
+    opacity: 0.8;
 }
