design: дизайн формы удаления пользователя

--- a/src/main/resources/templates/management.html
+++ b/src/main/resources/templates/management.html
@@ -30,7 +30,12 @@
 </div>
 
 <div id="delete-user">
-
+  <div class="label">Удалить пользователя</div>
+  <input placeholder="Имя пользователя" id="user-name-delete" type="text">
+  <input placeholder="Фамилия пользователя" id="user-surname-delete" type="text">
+  <div id="or" class="label">Или</div>
+  <input placeholder="Логин пользователя" id="user-login-delete" type="text">
+  <div id="delete-user-button">Удалить пользователя</div>
 </div>
 </body>
 </html>
