--- a/src/main/resources/static/css/closed-source/management-styles.css
+++ b/src/main/resources/static/css/closed-source/management-styles.css
@@ -1,6 +1,7 @@
 body{
     background-color: #121212;
 }
+
 #create-user, #delete-user {
     text-align: center;
     user-select: none;
@@ -11,18 +12,21 @@ body{
     padding: 1%;
     border: 3px solid rgba(255,255,255,0.05);
 }
+
 #create-user{
     width: 40%;
     height: 84%;
     left: 5%;
     top: 10%;
 }
+
 #delete-user{
     width: 40%;
-    height: 70%;
+    height: 50%;
     right: 5%;
-    top: 15%;
+    top: 25%;
 }
+
 .label{
     display: inline-block;
     font-size: 26px;
@@ -30,7 +34,8 @@ body{
     color: #e9e9e9;
     font-family: 'Helvetica', sans-serif;
 }
-input, select, #create-user-button{
+
+input, select, #create-user-button, #delete-user-button{
     background-color: #e9e9e9;
     pointer-events: all;
     display: inline-block;
@@ -43,11 +48,12 @@ input, select, #create-user-button{
     border-radius: 20px;
     margin-top: 20px;
 }
+
 select{
     width: 82%;
 }
 
-#create-user-button{
+#create-user-button, #delete-user-button{
     background-color: rgba(255, 255, 255, 0.07);
     border: none;
     color: #dadada;
@@ -60,11 +66,22 @@ select{
     justify-content: center;
     font-family: 'Helvetica', sans-serif;
 }
-#create-user-button:hover{
+
+#create-user-button:hover, #delete-user-button:hover{
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0.5);
     color: #000;
-}
-#create-user-button:hover{
     opacity: 0.8;
+}
+
+#or{
+    margin-top: 4%;
+    margin-bottom: 4%;
+}
+
+#user-login-delete{
+    margin-top: 0;
+}
+#delete-user-button{
+    margin-top: 5%;
 }
