--- a/src/main/resources/static/css/closed-source/management-styles.css
+++ b/src/main/resources/static/css/closed-source/management-styles.css
@@ -11,6 +11,8 @@ body{
     border-radius: 40px;
     padding: 1%;
     border: 3px solid rgba(255,255,255,0.05);
+    transition: border-right-color 0.4s ease, border-left-color 0.4s ease
+    , border-top-color 0.4s ease, border-bottom-color 0.4s ease;
 }
 
 #create-user{
@@ -84,4 +86,37 @@ select{
 }
 #delete-user-button{
     margin-top: 5%;
+}
+.comment-block {
+    font-size: 18px;
+    font-family: 'Helvetica', sans-serif;
+    pointer-events: none;
+    position: absolute;
+    top: 50%;
+    left: 10%;
+    max-width: 300px;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 15px;
+    margin-bottom: 20px;
+    transform: rotate(5deg);
+    transition: opacity 1s ease;
+}
+.display-none{
+    display: none!important;
+}
+.red-border{
+    border: 3px solid #da0101 !important;
+}
+.comment-block:after {
+    pointer-events: none;
+    content: '';
+    position: absolute;
+    bottom: -45px;
+    left: 0;
+    width: 60px;
+    height: 60px;
+    background-color: #f9f9f9;
+    clip-path: polygon(0% 0%, 0% 100%, 100% 0%);
+    transition: opacity 1s ease;
 }
