feature: добавлен показ логина и пароля созданного пользователя

--- a/src/main/resources/templates/management.html
+++ b/src/main/resources/templates/management.html
@@ -42,5 +42,12 @@
 <div id="wrong_create_form_comment" class="comment-block display-none">
   <p class="comment-text">Все поля в форме создания пользователя, кроме номера телефона и телеграма, обязательные</p>
 </div>
+
+<div id="smoke" class="smoke display-none"></div>
+<div id="created-label" class="display-none">
+  <div>Пользователь успешно создан. Логин: <span id="login-of-new-user"></span> Пароль: <span id="password-of-new-user"></span></div>
+  <a class="leave" href="/app/management">Выйти</a>
+</div>
+
 </body>
 </html>
