--- a/src/main/resources/static/css/closed-source/management-styles.css
+++ b/src/main/resources/static/css/closed-source/management-styles.css
@@ -120,3 +120,42 @@ select{
     clip-path: polygon(0% 0%, 0% 100%, 100% 0%);
     transition: opacity 1s ease;
 }
+.smoke{
+    background-color: rgba(0,0,0,0.5);
+    position: fixed;
+    z-index: 200;
+    width: 100%;
+    height: 100%;
+}
+#created-label, #failed-to-create-label{
+    display: inline-block;
+    text-align: right;
+    position: absolute;
+    top: 18%;
+    left: 30%;
+    z-index: 207;
+    background-color: #121212;
+    border-radius: 20px;
+    font-size: 20px!important;
+    font-family: 'Helvetica', sans-serif!important;
+    color: #f5f5f5bf;
+    padding: 3%;
+    padding-bottom: 2%;
+}
+.leave{
+    margin-left: 10px;
+    margin-top: 40px;
+    display: inline-block;
+    text-decoration: none;
+    padding: 3%;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.05);
+    font-size: 20px!important;
+    font-family: 'Helvetica', sans-serif!important;
+    color: #f5f5f5bf;
+    transition: color 0.4s ease, background-color 0.4s ease;
+}
+.leave:hover{
+    background-color: #f5f5f5bf;
+    color: black;
+}
