feature: добавлен показ сообщения при неудачной попытке создания пользователя

--- a/src/main/resources/templates/management.html
+++ b/src/main/resources/templates/management.html
@@ -43,6 +43,11 @@
   <p class="comment-text">Все поля в форме создания пользователя, кроме номера телефона и телеграма, обязательные</p>
 </div>
 
+<div id="failed_to_create_user" class="comment-block display-none">
+  <p class="comment-text">Не удалось создать пользователя, повторите попытку позже.</p>
+</div>
+
+
 <div id="smoke" class="smoke display-none"></div>
 <div id="created-label" class="display-none">
   <div>Пользователь успешно создан. Логин: <span id="login-of-new-user"></span> Пароль: <span id="password-of-new-user"></span></div>
