--- a/src/main/resources/static/css/closed-source/management-styles.css
+++ b/src/main/resources/static/css/closed-source/management-styles.css
@@ -127,7 +127,7 @@ select{
     width: 100%;
     height: 100%;
 }
-#created-label, #failed-to-create-label{
+#created-label, #failed-to-create-label, #failed-to-delete-label, #deleted-label{
     display: inline-block;
     text-align: right;
     position: absolute;
@@ -158,4 +158,10 @@ select{
 .leave:hover{
     background-color: #f5f5f5bf;
     color: black;
+}
+#failed-to-delete-label, #deleted-label{
+    left: 35%;
+}
+#wrong_delete_form_comment{
+    left:40%;
 }
