feature: добавлен комментарий на теоритический раздел

--- a/src/main/resources/templates/theory.html
+++ b/src/main/resources/templates/theory.html
@@ -113,6 +113,8 @@
         </div>
     </div>
 </div>
-
+<div id="clarification" class="comment-block display-none">
+    <p class="comment-text">Вы можете пометить раздел прочитанным, кликнув на него правой кнопкой мыши</p>
+</div>
 </body>
 </html>
