--- a/src/main/resources/static/css/closed-source/theory-styles.css
+++ b/src/main/resources/static/css/closed-source/theory-styles.css
@@ -349,3 +349,34 @@ svg{
 .section>td:hover{
     opacity: 0.8;
 }
+.comment-block {
+    font-size: 18px;
+    font-family: 'Helvetica', sans-serif;
+    pointer-events: none;
+    position: absolute;
+    top: 50%;
+    left: 10%;
+    max-width: 300px;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 15px;
+    margin-bottom: 20px;
+    transform: rotate(5deg);
+    transition: opacity 1s ease;
+}
+.comment-block:after {
+    pointer-events: none;
+    content: '';
+    position: absolute;
+    bottom: -45px;
+    left: 0;
+    width: 60px;
+    height: 60px;
+    background-color: #f9f9f9;
+    clip-path: polygon(0% 0%, 0% 100%, 100% 0%);
+    transition: opacity 1s ease;
+}
+#clarification{
+    top:30%;
+    left: 30%;
+}
