--- a/src/main/resources/static/css/closed-source/edit-module-styles.css
+++ b/src/main/resources/static/css/closed-source/edit-module-styles.css
@@ -164,3 +164,6 @@ textarea{
     background-color: rgba(255, 255, 255, 0.5);
     color: #000;
 }
+#no_condition, #no_short_answer, #no_solution{
+    z-index: 300;
+}
