--- a/src/main/resources/templates/module-template.html
+++ b/src/main/resources/templates/module-template.html
@@ -44,7 +44,7 @@
 </div>
 
 <div th:if="${role == 'GOD'}" id="task-form" class="display-none">
-    <textarea  placeholder="Ввведите условие задания" id="task-condition-form"  rows="4" cols="50"></textarea>
+    <textarea  placeholder="Введите условие задания" id="task-condition-form"  rows="4" cols="50"></textarea>
     <br>
     <textarea placeholder="Введите развернутое решение на задание" id="task-full-answer-form" rows="4" cols="50"></textarea>
     <br>
@@ -161,6 +161,15 @@
 </div>
 <div th:if="${role == 'GOD'}" id="failed_to_delete_comment" class="comment-block display-none">
     <p class="comment-text">Не удалось удалить задание</p>
+</div>
+<div th:if="${role == 'GOD'}" id="no_condition" class="wrong_form_comment comment-block display-none">
+    <p class="comment-text">У задания должно быть условие</p>
+</div>
+<div th:if="${role == 'GOD'}" id="no_short_answer" class="wrong_form_comment comment-block display-none">
+    <p class="comment-text">Задание этого модуля должно содержать краткий ответ</p>
+</div>
+<div th:if="${role == 'GOD'}" id="no_solution" class="wrong_form_comment comment-block display-none">
+    <p class="comment-text">Задание этого модуля должно содержать либо решение либо краткий ответ</p>
 </div>
 </body>
 </html>
